tests/valid/self_referential_struct.lang
import "core:c";

pub typedef Test struct {
    test: *Test,
};

extern fn main() {
    var a: Test;
    a.test = malloc(@sizeof(Test));
    free(a.test);
}
