tests/invalid/extern_fn_pass_compound_by_value.lang
typedef Vec3 struct {
    e: [3]float,
};

typedef SomeFunc extern fn* (a: Vec3);
extern fn hello(a: Vec3);

